[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ui/submenus/appearance_editor/textures/cursor.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/submenus/appearance_editor/color_selector.gd" type="Script" id=3]

[node name="ColorSelector" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 500, 100 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorMapBox" type="Node2D" parent="."]
position = Vector2( 0, 23 )

[node name="Colormap" type="Sprite" parent="ColorMapBox"]
centered = false

[node name="Cursor" type="Sprite" parent="ColorMapBox"]
texture = ExtResource( 1 )

[node name="PreviewBorder" type="ColorRect" parent="ColorMapBox/Cursor"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPreview" type="ColorRect" parent="ColorMapBox/Cursor/PreviewBorder"]
margin_left = 3.0
margin_top = 3.0
margin_right = 27.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 98.0
margin_bottom = 22.0
text = "ColorSelector"
[connection signal="gui_input" from="." to="." method="_on_ColorSelector_gui_input"]
[connection signal="resized" from="." to="." method="_on_ColorSelector_resized"]
